# PhotoResizeTool

./: .gitignore  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  Executionctrlvalues.h  FileOptions.h  PhotoFileList.h  PhotoOptions.h  PhotoResizer.cpp  PhotoResizer.h  ProgramOptions.h  README.md  fileCtrlValues.h  fileOptions.h  main.cpp  photoCtrlValues.h  photofilefinder.cpp  photofilefinder.h
